added quill rich text editor + security tweaks