@@ -12,11 +12,12 @@ import victor.training.spring.web.repo.UserRepo;
 import javax.annotation.PostConstruct;
 import java.util.Arrays;
 import java.util.Date;
+import java.util.List;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
-public class InsertDummyDataAtStartup {
+public class InitialData {
 	private final TrainingRepo trainingRepo;
 	private final TeacherRepo teacherRepo;
 	private final ProgrammingLanguageRepo languageRepo;
@@ -24,7 +25,7 @@ public class InsertDummyDataAtStartup {
 
 	@PostConstruct
 	public void run() throws Exception {
-		log.info("Inserting dummy training data");
+		log.info("Inserting initial training data");
 
 		ProgrammingLanguage java = languageRepo.save(new ProgrammingLanguage("Java"));
 		ProgrammingLanguage php = languageRepo.save(new ProgrammingLanguage("PHP"));
@@ -33,19 +34,19 @@ public class InsertDummyDataAtStartup {
 		Teacher ionut = teacherRepo.save(new Teacher("Ionut").setContractType(ContractType.PART));
 
 		Training spring = new Training("Spring Framework", new Date(System.currentTimeMillis()+10*24*60*60*1000L))
-				.setDescription("All about Spring")
+				.setDescription("<p>All about <b>Spring</b></p>")
 				.setProgrammingLanguage(java)
 				.setTeacher(victor);
 		Training jpa = new Training("JPA", new Date(System.currentTimeMillis()+2*24*60*60*1000L))
-				.setDescription("The coolest standard in Java EE")
+				.setDescription("<p>The coolest standard in Java EE</p>")
 				.setProgrammingLanguage(java)
 				.setTeacher(victor);
 		Training javaBasic = new Training("Java Basic", new Date(System.currentTimeMillis()+20*24*60*60*1000L))
-				.setDescription("The new way of doing Single Page Applications")
+				.setDescription("<p>The new way of doing Single Page Applications</p>")
 				.setProgrammingLanguage(java)
 				.setTeacher(ionut);
 		Training patterns = new Training("Design Patterns", new Date(System.currentTimeMillis()+2*24*60*60*1000L))
-				.setDescription("Design Thinking")
+				.setDescription("<p>Design Thinking</p>")
 				.setProgrammingLanguage(php)
 				.setTeacher(victor);
 
@@ -54,9 +55,9 @@ public class InsertDummyDataAtStartup {
 		trainingRepo.save(javaBasic);
 		trainingRepo.save(patterns);
 
-		userRepo.save(new User("I've got the power", "power", UserRole.POWER, Arrays.asList(victor.getId()))); // only manages Victor, not Ionut
-		userRepo.save(new User("Boss", "admin", UserRole.ADMIN, Arrays.asList(victor.getId()))); // only manages Victor, not Ionut
-		userRepo.save(new User("Clerk", "user", UserRole.USER, Arrays.asList(victor.getId(), ionut.getId())));
+		userRepo.save(new User("PowerHorse", "power", UserRole.POWER, List.of(victor.getId()))); // only manages Victor, not Ionut
+		userRepo.save(new User("Boss", "admin", UserRole.ADMIN, List.of(victor.getId()))); // only manages Victor, not Ionut
+		userRepo.save(new User("Clerk", "user", UserRole.USER, List.of(victor.getId(), ionut.getId())));
 	}
 
 
